// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "purple",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "padding": 10,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "yellow",
          "fontSize": 18,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        [
          {
            "textAlign": "left",
          },
        ],
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#ECEFEB",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#A6B2A8",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledLoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#ECEFEB",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: LoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#ECEFEB",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: PrimaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#2FA44A",
        "borderRadius": 14,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
        "shadowColor": "#2FA44A",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.28,
        "shadowRadius": 8,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SecondaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "backgroundColor": "#FDFDFC",
        "borderColor": "#E1E7E1",
        "borderRadius": 14,
        "borderWidth": 1.5,
        "height": 48,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#26312A",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "700",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SmallButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  style={
    [
      {
        "alignSelf": "center",
        "backgroundColor": "#2FA44A",
        "borderRadius": 14,
        "marginBottom": 12,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
        "shadowColor": "#2FA44A",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.28,
        "shadowRadius": 8,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="black"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "black",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 14,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontWeight": "700",
          "lineHeight": 18,
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;
